--- a/site/index.html
+++ b/site/index.html
@@ -558,7 +558,7 @@
 
 <h1 id="inicio">Inicio</h1>
 <h2 id="bienvenidos-a-pluma-y-tertulia">Bienvenidos a Pluma y Tertulia</h2>
-<p><strong>Pluma y Tertulia</strong> es un albergue para artículos sin hogar. Aquí damos cobijo a ideas, reflexiones y discusiones que buscan un espacio donde ser apreciadas y compartidas. Nuestro objetivo es crear un rincón cálido y acogedor para la exploración de la cultura, el arte, y la literatura.</p>
+<p><strong>Pluma y Tertulia</strong> es un albergue para artículos sin hogar. Aquí damos cobijo a ideas, reflexiones y discusiones que buscan un espacio donde ser apreciadas y compartidas. Nuestro objetivo es crear un rincón cálido y acogedor para la exploración de la cultura, la ciencia, el arte, y la literatura.</p>
 <hr />
 <div style="text-align: center;">
   <img src="https://uploads2.wikiart.org/images/gustave-caillebotte/portrait-of-a-man-writing-in-his-study.jpg!Large.jpg" alt="La Fragua de Vulcano" style="width: 60%; height: auto;">
@@ -569,7 +569,6 @@
 <h3 id="exploraremos">Exploraremos</h3>
 <p>En <strong>Pluma y Tertulia</strong>, no nos atamos a géneros específicos ni a temáticas rígidas. Este es un proyecto personal que da cobijo a cualquier texto que no tenga techo. Desde reflexiones filosóficas hasta recetas de cocina, aquí se recibe de todo. ¿Un ensayo sobre la influencia de los gatos en la literatura del siglo XIX? Bienvenido. ¿Una diatriba sobre la mejor manera de hacer café? Adelante. ¿Un poema en verso libre sobre el tráfico? Claro que sí.</p>
 <p>No tenemos un género específico para proveer; la diversidad es nuestra norma. Este es un rincón donde cualquier idea puede encontrar un hogar, siempre y cuando no sepa dónde más ir.</p>
-<p>Te invitamos a unirte a nosotros en este viaje de descubrimiento y reflexión. Esperamos que disfrutes de cada artículo y que encuentres inspiración en cada rincón de este blog.</p>
 <hr />
 <p>¡Gracias por visitarnos y esperamos verte de nuevo pronto!</p>
 
